--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,47 @@
 {
-"name": "TinyExtensionPack",
-"version": "1.0",
-"description": "細かい機能を集めた拡張パック",
-"icons": {
-     "128": "icon128.png",
-     "48": "icon48.png"
-},
-"content_scripts": [
-    {
-        "js": [
-            "jquery-1.8.3.min.js",
-            "script.js",
+    "name": "TinyExtensionPack",
+    "version": "1.0",
+    "description": "細かい機能を集めた拡張パック",
+    "options_page": "options.html",
+    "icons": {
+        "128": "icon128.png",
+        "48": "icon48.png"
+    },
+    "background": {
+        "scripts": [
+            "init.js",
             "google_plus_mark_for_public.js",
             "500px_small_image.js",
-            "instagram_3column.js"
-        ],
-	"run_at": "document_end",
-        "matches": [
-            "https://plus.google.com/*",
-            "http://500px.com/*",
-            "http://instagram.com/*"
+            "instagram_3column.js",
+            "google_plus_bgcolor_change.js",
+            "google_plus_notification_icon_change.js",
+            "background.js"
         ]
-    }
-],
-"manifest_version": 2
+    },
+    "content_scripts": [
+        {
+            "js": [
+                "jquery-1.8.3.min.js",
+                "init.js",
+                "google_plus_mark_for_public.js",
+                "500px_small_image.js",
+                "instagram_3column.js",
+                "google_plus_bgcolor_change.js",
+                "google_plus_notification_icon_change.js",
+                "script.js"
+            ],
+            "run_at": "document_end",
+            "matches": [
+                "*://*/*"
+            ]
+        }
+    ],
+    "permissions": [
+        "storage"
+    ],
+    "web_accessible_resources": [
+        "assets/google_plus_notification_icon_change/Lightning_gray.png",
+        "assets/google_plus_notification_icon_change/Lightning_black.png"
+    ],
+    "manifest_version": 2
 }
